# shimlib

./: .gitignore  .lefthook.yml  .prettierignore  LICENSE  README.md  bk_schema.json  conftest.py  lefthook.yml  our_schema.json  pyproject.toml
.github/workflows/: ci_cd.yaml
.zed/: settings.json
scripts/: try_pipeline.py
src/shimbboleth/_dogmantic/: README.md  _visitor.py  aliases.py  converter.py  field.py  field_types.py  json_schema.py  model.py  old_json_validator.py  test_ann.py  validation.py
src/shimbboleth/_dogmantic/tests/: test_field.py  test_json_schema.py
src/shimbboleth/_model/: PHILOSOPHIES.md  README.md  TODO.md  __init__.py  _types.py  _validators.py  _visitor.py  field.py  field_alias.py  field_types.py  jsonT.py  json_dump.py  json_load.py  json_schema.py  model.py  model_meta.py  validate.py  validation.py
src/shimbboleth/_model/tests/: test_field.py  test_field_alias.py  test_json_dump.py  test_json_load.py  test_json_schema.py  test_model_validation.py  test_validate.py  test_validation.py  test_validators.py
src/shimbboleth/buildkite/: agent.py  agent_test.py  pipeline_config__schemas_test.py  pipeline_config_test.py
src/shimbboleth/buildkite/pipeline_config/: ISSUES.md  README.md  TODO.md  TODOs.md  __init__.py  _agents.py  _alias.py  _base.py  _block_step.py  _canonicalize.py  _command_step.py  _fields.py  _group_step.py  _input_step.py  _interactive_step.py  _manual_step.py  _matrix.py  _nested_steps.py  _notify.py  _parse_steps.py  _trigger_step.py  _types.py  _validators.py  _wait_step.py  block_step.py  command_step.py  group_step.py  input_step.py  schema.json  trigger_step.py  wait_step.py
src/shimbboleth/buildkite/pipeline_config/tests/: README.md  conftest.py  test_base.py  test_gen_valid_pipelines.py  test_invalid_pipelines.py  test_json_loading.py  test_json_loading_logic.py  test_json_schema.py  test_key.py  test_schema_invalid_pipelines.py  test_schema_valid_pipelines.py  test_valid_pipelines.py  upstream_compat_test.py
src/shimbboleth/buildkite/pipeline_config/tests/invalid-pipelines/: nested-block-with-type.yaml
src/shimbboleth/internal/clay/: README.md  __init__.py  _validators.py  jsonT.py  json_dump.py  json_load.py  json_schema.py  model.py  model_meta.py
src/shimbboleth/internal/clay/tests/: test_field_alias.py  test_json_dump.py  test_json_load.py  test_json_schema.py  test_model_validation.py  test_validators.py
(+88 files in other folders)
