[project]
name = "shimbboleth"
version = "0.1.0"
description = "Josh's opinionated (and typed) shims library."
readme = "README.md"
requires-python = ">=3.11"
dependencies = ["httpx>=0.27.2", "pydantic>=2.9.2"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/shimbboleth"]

[tool.uv]
dev-dependencies = [
    "pytest-asyncio>=0.24.0",
    "pytest-trio>=0.8.0",
    "pytest>=8.3.3",
    "ruff>=0.7.3",
    "trio>=0.27.0",
]
