[project]
name = "shimbboleth"
description = "Josh's opinionated (and typed) shims library."
readme = "README.md"
requires-python = ">=3.11"
dependencies = ["httpx>=0.27.2", "pydantic>=2.9.2"]
dynamic = ["version", "urls"]

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.targets.wheel]
packages = ["src/shimbboleth"]

[tool.hatch.build.hooks.vcs]
version-file = "_version.py"

[tool.hatch.metadata.hooks.vcs.urls]
Homepage = "https://github.com/thejcannon/shimbboleth"
source_archive = "https://github.com/thejcannon/shimbboleth/archive/{commit_hash}.zip"

[tool.uv]
dev-dependencies = [
    "jmespath>=1.0.1",
    "pydantic",
    "pytest-asyncio>=0.24.0",
    "pytest-trio>=0.8.0",
    "pytest>=8.3.3",
    "pyyaml>=6.0.2",
    "ruff>=0.7.3",
    "trio>=0.27.0",
]

[tool.uv.sources]
pydantic = { git = "https://github.com/thejcannon/pydantic.git", rev = "8b3060812fc1673a4d0c6a28a60b90567b49d113" }
